<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPresupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/presupuesto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <TextView
        android:id="@+id/textViewDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/destino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPresupuesto" />

    <RadioGroup
        android:id="@+id/radioGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDestino">

        <RadioButton
            android:id="@+id/radioPeninsula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/penisula" />

        <RadioButton
            android:id="@+id/radioIslas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/islas" />

        <RadioButton
            android:id="@+id/radioInterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interior" />
    </RadioGroup>

    <Switch
        android:id="@+id/switchIva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iva"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrupo"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/botonMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchIva" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonMostrar" />

    <ImageView
        android:id="@+id/imageViewDestino"
        android:layout_width="300dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrecio" />

</androidx.constraintlayout.widget.ConstraintLayout>